--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,49 @@ a {
   opacity: 0;
 }
 
+.Scroll {
+  position: fixed;
+  right: 1vw;
+  top: 60%;
+  z-index: 10;
+  margin-bottom: 10px;
+}
+.Scroll li {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-end;
+  height: 20px;
+  width: 100px;
+  border-radius: 10px;
+  background-color: #aaa;
+  margin-bottom: 35px;
+  margin-right: -7px;
+  padding: 0px 2px;
+  cursor: pointer;
+  transition: 0.7s;
+}
+.Scroll li span {
+  letter-spacing: 1px;
+  font-size: 12px;
+  color: #efefef;
+  opacity: 1;
+  transition: 0.3s;
+  line-height: 12px;
+}
+.Scroll li a {
+  display: block;
+}
+.Scroll li.on {
+  align-items: flex-start;
+  scale: 1.1;
+  background-color: rgba(235, 213, 69, 0.989);
+}
+.Scroll li.on span {
+  opacity: 0;
+  font-weight: bold;
+}
+
 #header {
   z-index: 10;
   width: 100%;
@@ -550,6 +593,7 @@ a {
   min-height: 350px;
   background-color: rgba(235, 213, 69, 0.989);
   padding: 60px 100px 60px 60px;
+  height: 500px;
   position: relative;
 }
 #services main section article .wrap h2 {
@@ -586,6 +630,9 @@ a {
 #LatestProjects {
   width: 100%;
   padding: 150px 0px;
+  opacity: 0;
+  transform: rotateY(200deg) translateY(100px);
+  transition: 0.5s;
 }
 #LatestProjects .inner {
   width: 1180px;
@@ -660,6 +707,10 @@ a {
   left: 0px;
   background: rgba(0, 0, 0, 0.279);
 }
+#LatestProjects.on {
+  opacity: 1;
+  transform: rotateY(0deg) translateY(0px);
+}
 
 #footer {
   width: 100%;
@@ -709,7 +760,7 @@ a {
   color: rgba(235, 213, 69, 0.989);
 }
 
-@media screen and (max-width: 1180px) {
+@media screen and (max-width: 1179px) {
   .inner {
     width: 100% !important;
     max-width: 1180px;
@@ -721,6 +772,9 @@ a {
   }
   #header .inner .btnCall {
     display: block;
+  }
+  #visual .slider .inner {
+    top: 40%;
   }
   #visual .slider .inner h1 {
     font: bold 40px/1 "arial";
@@ -793,8 +847,11 @@ a {
     overflow: hidden;
     padding: 0px 10px;
   }
+  #visual .slider .inner {
+    top: 40%;
+  }
   #visual .slider .inner h1 {
-    font: bold 30px/1 "arial";
+    font: bold 25px/1 "arial";
   }
   #visual .Slide_btn .prev {
     width: 30px;
