--- a/css/style.css
+++ b/css/style.css
@@ -219,99 +219,34 @@
 }
 
 @media screen and (max-width: 1179px) {
-  #header .inner {
+  #header_sub .inner {
     width: 100%;
     max-width: 1180px;
     overflow: hidden;
     padding: 0px 10px;
   }
-  #header .inner .menuWeb {
+  #header_sub .inner .menuWeb {
     display: none;
   }
-  #header .inner .btnCall {
+  #header_sub .inner .btnCall {
     display: block;
   }
-  #header .inner .menuMo {
+  #header_sub .inner .menuMo {
     display: block;
   }
-  #visual .slider .inner {
-    top: 40%;
-    width: 100%;
-    max-width: 1180px;
-    overflow: hidden;
-    padding: 0px 10px;
-  }
-  #visual .slider .inner h1 {
-    font: bold 40px/1 "arial";
-  }
-  #visual .Slide_btn .prev {
-    left: 30px;
-  }
-  #visual .Slide_btn .next {
-    right: 30px;
-  }
-  #information.action {
-    padding: 100px 0;
-  }
-  #information.action .inner {
-    width: 100%;
-    max-width: 1180px;
-    overflow: hidden;
-    padding: 0px 10px;
-    display: block;
-  }
-  #information.action .inner .wrap {
-    width: 100%;
-  }
-  #information.action .inner .wrap h1 {
-    text-align: center;
-    margin: 0px 0px 30px;
-    padding-top: 0;
-  }
-  #information.action .inner .wrap a {
-    margin: 30px auto 0px;
-  }
-  #information.action .QiuckJoin {
-    margin: 50px auto 0;
-  }
-  #services {
-    padding: 100px 0px 600px;
-  }
-  #services .inner {
-    width: 100%;
-    max-width: 1180px;
-    overflow: hidden;
-    padding: 0px 10px;
-  }
-  #services main section article {
-    width: 100%;
-    height: 500px;
-    display: block;
-  }
-  #services main section article .pic {
-    width: 100%;
-    height: auto;
-  }
-  #services main section article .wrap {
-    height: auto;
-    width: 100%;
-  }
-  #services main section article .wrap a {
-    height: auto;
-    width: 100%;
-    padding: 10px 20px;
-    margin: 50px 10px;
-  }
-  #LatestProjects {
+  .content {
     padding: 100px 0px;
   }
-  #LatestProjects .inner .wrap article {
-    margin-right: 10px;
+  .content .inner {
+    width: 100%;
+    max-width: 1180px;
+    overflow: hidden;
+    padding: 0px 10px;
   }
-  #footer {
+  #footer_sub {
     padding: 80px 0;
   }
-  #footer .inner {
+  #footer_sub .inner {
     width: 100%;
     max-width: 1180px;
     overflow: hidden;
@@ -320,129 +255,154 @@
   }
 }
 @media screen and (max-width: 539px) {
-  .inner {
-    width: 100% !important;
-    max-width: 1180px;
-    overflow: hidden;
-    padding: 0px 10px;
-  }
-  #visual .slider .inner {
-    width: 100%;
-    max-width: 1180px;
-    overflow: hidden;
-    padding: 0px 10px;
-    top: 40%;
-  }
-  #visual .slider .inner h1 {
-    font: bold 25px/1 "arial";
-  }
-  #visual .Slide_btn .prev {
-    width: 30px;
-    height: 30px;
-    left: 20px;
-  }
-  #visual .Slide_btn .next {
-    right: 20px;
-    height: 30px;
-    width: 30px;
-  }
-  #information.action {
-    padding: 100px 0;
-  }
-  #information.action .inner {
-    width: 100%;
-    max-width: 1180px;
-    overflow: hidden;
-    padding: 0px 10px;
-    display: block;
-  }
-  #information.action .inner .wrap {
-    width: 100%;
-  }
-  #information.action .inner .wrap h1 {
-    text-align: center;
-    margin: 0px 0px 20px;
-    padding-top: 0;
-  }
-  #information.action .inner .wrap a {
-    margin: 30px auto 0px;
-  }
-  #information.action .QiuckJoin {
-    margin: 50px auto 0;
-  }
-  #services {
-    padding: 100px 0px 400px;
-  }
-  #services .inner {
-    width: 100%;
-    max-width: 1180px;
-    overflow: hidden;
-    padding: 0px 10px;
-  }
-  #services main .inner {
-    width: 100%;
-    max-width: 1180px;
-    overflow: hidden;
-    padding: 0px 10px;
-  }
-  #services main .inner ul {
-    padding-top: 40px;
-  }
-  #services main .inner ul li {
-    padding: 0px 20px;
-  }
-  #services main .inner ul li a {
-    padding: 0px 0px;
-    font: bold 13px/1 "arial";
-  }
-  #services main section article {
-    display: block;
-    width: 100%;
-    height: 300px;
-  }
-  #services main section article .pic {
-    width: 100%;
-    height: auto;
-  }
-  #services main section article .wrap {
-    height: auto;
-    width: 100%;
-    padding: 20px 60px 20px 20px;
-  }
-  #services main section article .wrap h2 {
-    font: bold 25px/1.3 "arial";
-    padding: 0 0 20px;
-  }
-  #services main section article .wrap p {
-    font: 10px/1.3 "arial";
-  }
-  #services main section article .wrap a {
-    height: auto;
-    width: 100%;
-    padding: 10px 10px;
-    margin: 30px 10px 10px;
-  }
-  #LatestProjects {
-    padding: 50px 0px;
-  }
-  #LatestProjects::after {
-    content: "";
-    display: block;
-    clear: both;
-  }
-  #LatestProjects .inner {
-    width: 100%;
-    max-width: 1180px;
-    overflow: hidden;
-    padding: 0px 10px;
-  }
-  #LatestProjects .inner .wrap {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  #LatestProjects .inner .wrap article {
+  #footer_sub .inner h1 {
     margin-bottom: 20px;
+  }
+  #footer_sub .inner ul {
+    width: 100%;
+  }
+  #footer_sub .inner ul li {
+    margin-left: 0px;
+    margin: 5px;
+  }
+}
+.community table {
+  width: 100%;
+  border-bottom: 1px solid #111;
+  border-collapse: collapse;
+  margin-bottom: 50px;
+}
+.community table tr:nth-of-type(even) {
+  background: #eee;
+}
+.community table tr:hover {
+  font-weight: bold;
+}
+.community table tr th {
+  padding: 15px;
+  background: rgba(235, 213, 69, 0.989);
+  color: #fff;
+}
+.community table tr th:nth-of-type(1) {
+  width: 10%;
+}
+.community table tr th:nth-of-type(3) {
+  width: 15%;
+}
+.community table tr th:nth-of-type(4) {
+  width: 15%;
+}
+.community table tr td {
+  padding: 13px;
+  border-bottom: 1px solid #ddd;
+  text-align: center;
+}
+.community table tr td:nth-of-type(2) {
+  text-align: left;
+}
+.community table tr td:nth-of-type(3) {
+  font-family: "맑은 고딕";
+}
+.community table tr td a {
+  color: #333;
+  line-height: 1.4;
+}
+.community .pagination {
+  width: 100%;
+  text-align: center;
+}
+.community .pagination::after {
+  content: "";
+  display: block;
+  clear: both;
+}
+.community .pagination .prev {
+  float: left;
+  display: block;
+  width: 30px;
+  height: 30px;
+  background: rgba(235, 213, 69, 0.989);
+  color: #eee;
+  font-size: 20px;
+  text-align: center;
+}
+.community .pagination .next {
+  float: right;
+  display: block;
+  width: 30px;
+  height: 30px;
+  background: rgba(235, 213, 69, 0.989);
+  color: #eee;
+  font-size: 20px;
+  text-align: center;
+}
+.community .pagination .numbers {
+  display: inline-block;
+  text-align: center;
+  font-size: 0;
+}
+.community .pagination .numbers a {
+  display: inline-block;
+  width: 30px;
+  height: 30px;
+  border: 1px solid #888;
+  font: 11px/30px "arial";
+  color: #666;
+  margin: 0 5px;
+  transition: 0.5s;
+}
+.community .pagination .numbers a:hover {
+  background: rgba(235, 213, 69, 0.989);
+  border: none;
+  color: #fff;
+}
+
+@media screen and (max-width: 1179px) {
+  .community .inner table tr th:nth-of-type(1) {
+    width: 13%;
+  }
+  .community .inner table tr th:nth-of-type(3) {
+    width: 20%;
+  }
+  .community .inner table tr th:nth-of-type(4) {
+    width: 0%;
+    display: none;
+  }
+  .community .inner table tr td:nth-of-type(4) {
+    display: none;
+  }
+  .community .inner .pagination .numbers a:nth-of-type(6) {
+    display: none;
+  }
+  .community .inner .pagination .numbers a:nth-of-type(7) {
+    display: none;
+  }
+  .community .inner .pagination .numbers a:nth-of-type(8) {
+    display: none;
+  }
+  .community .inner .pagination .numbers a:nth-of-type(9) {
+    display: none;
+  }
+  .community .inner .pagination .numbers a:nth-of-type(10) {
+    display: none;
+  }
+}
+@media screen and (max-width: 539px) {
+  .community .inner table tr th {
+    font-size: 13px;
+  }
+  .community .inner table tr th:nth-of-type(1) {
+    width: 0%;
+    display: none;
+  }
+  .community .inner table tr th:nth-of-type(3) {
+    width: 29%;
+  }
+  .community .inner table tr td:nth-of-type(1) {
+    display: none;
+  }
+  .community .inner .pagination .numbers {
+    display: none;
   }
 }
 .location {
@@ -450,6 +410,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  min-height: 100vh;
 }
 .location #map {
   width: 100%;
@@ -535,7 +496,6 @@
 }
 .location .container .tab input[type=radio]:checked ~ .content {
   max-height: 100vh;
-  height: 80px;
 }
 .location .container .tab input[type=radio]:checked ~ .content p {
   color: #333;
@@ -587,23 +547,6 @@
   color: #333;
   z-index: 10;
 }
-.location .container .tab label h3:after {
-  content: "";
-  position: absolute;
-  left: 0;
-  bottom: -5px;
-  width: 0px;
-  height: 2px;
-  margin: 5px 0 0;
-  transition: all 0.2s ease-in-out;
-  transition-duration: 0.3s;
-  opacity: 0;
-  background-color: rgba(235, 213, 69, 0.989);
-}
-.location .container .tab label h3:hover:after {
-  width: 100%;
-  opacity: 1;
-}
 .location .container .tab .content {
   max-height: 0;
   transition: 1s;
@@ -614,6 +557,88 @@
   padding: 10px 0;
   color: #333;
   z-index: 10;
+}
+
+.vidList {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0px 0px 150px;
+}
+.vidList article {
+  width: 280px;
+  height: 400px;
+  background-color: #efefef;
+  margin-right: 15px;
+  margin-bottom: 30px;
+}
+.vidList article:nth-child(4n) {
+  margin-right: 0px;
+}
+.vidList article .pic {
+  display: block;
+  width: 100%;
+  height: 60%;
+  padding: 15px;
+  overflow: hidden;
+}
+.vidList article .pic img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: 0.7s;
+}
+.vidList article .pic:hover img {
+  transform: scale(1.3);
+}
+.vidList article .con {
+  width: 100%;
+  height: 40%;
+  padding: 20px;
+  text-align: right;
+}
+.vidList article .con h2 {
+  font: bold 15px/1.2 "arial";
+  color: #444;
+  margin-bottom: 15px;
+  text-align: center;
+}
+.vidList article .con p {
+  font: 13px/1.4 "arial";
+  color: #666;
+  margin-bottom: 20px;
+  text-align: center;
+}
+.vidList article .con span {
+  font: bold 15px/1 "arial";
+  color: rgba(235, 213, 69, 0.989);
+  display: inline-block;
+  padding-right: 10px;
+}
+.vidList figure.pop {
+  width: 100%;
+  height: 100vh;
+  position: fixed;
+  z-index: 11;
+  top: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.8);
+  overflow: hidden;
+  padding: 5vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.vidList figure.pop .btnClose {
+  position: absolute;
+  top: 20px;
+  right: 30px;
+  color: #fff;
+  cursor: pointer;
+  font-size: 40px;
+}
+.vidList figure.pop .btnClose:hover {
+  color: rgba(235, 213, 69, 0.989);
 }
 
 * {
@@ -1253,7 +1278,7 @@ a {
   padding: 150px 0px;
   opacity: 1;
   transform: rotateY(200deg) translateY(100px);
-  transition: 0.5s;
+  transition: 1s ease;
 }
 #LatestProjects .inner {
   width: 1180px;
@@ -1435,6 +1460,9 @@ a {
     margin: 0px 0px 30px;
     padding-top: 0;
   }
+  #information.action .inner .wrap p {
+    text-align: center;
+  }
   #information.action .inner .wrap a {
     margin: 30px auto 0px;
   }
@@ -1487,12 +1515,6 @@ a {
   }
 }
 @media screen and (max-width: 539px) {
-  .inner {
-    width: 100% !important;
-    max-width: 1180px;
-    overflow: hidden;
-    padding: 0px 10px;
-  }
   #visual .slider .inner {
     width: 100%;
     max-width: 1180px;
@@ -1610,6 +1632,16 @@ a {
   }
   #LatestProjects .inner .wrap article {
     margin-bottom: 20px;
+  }
+  #footer .inner h1 {
+    margin-bottom: 20px;
+  }
+  #footer .inner ul {
+    width: 100%;
+  }
+  #footer .inner ul li {
+    margin-left: 0px;
+    margin: 5px;
   }
 }
 
