--- a/scss/_location.scss
+++ b/scss/_location.scss
@@ -3,6 +3,7 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	min-height: 100vh;
 	#map {
 		width: 100%;
 		height: 500px;
@@ -80,15 +81,12 @@
 			}
 			input[type="radio"] {
 				appearance: none;
-				//display: none;
-				//appearance: none; 요소자체구성요소를 숨김, 따라서 기능이나 개발자창에서 존재가 확인가능
 				&:checked + label::after {
 					transform: rotate(135deg);
 					color: #efefef;
 				}
 				&:checked ~ .content {
 					max-height: 100vh;
-					height: 80px;
 					p {
 						color: #333;
 					}
@@ -144,25 +142,25 @@
 					color: #333;
 					z-index: 10;
 					//너무 조잡스러운가
-					&:after {
-						content: "";
-						position: absolute;
-						left: 0;
-						bottom: -5px;
-						width: 0px;
-						height: 2px;
-						margin: 5px 0 0;
-						transition: all 0.2s ease-in-out;
-						transition-duration: 0.3s;
-						opacity: 0;
-						background-color: rgba(235, 213, 69, 0.989);
-					}
-					&:hover {
-						&:after {
-							width: 100%;
-							opacity: 1;
-						}
-					}
+					// &:after {
+					// 	content: "";
+					// 	position: absolute;
+					// 	left: 0;
+					// 	bottom: -5px;
+					// 	width: 0px;
+					// 	height: 2px;
+					// 	margin: 5px 0 0;
+					// 	transition: all 0.2s ease-in-out;
+					// 	transition-duration: 0.3s;
+					// 	opacity: 0;
+					// 	background-color: rgba(235, 213, 69, 0.989);
+					// }
+					// &:hover {
+					// 	&:after {
+					// 		width: 100%;
+					// 		opacity: 1;
+					// 	}
+					// }
 				}
 			}
 			.content {
