--- a/css/style.css
+++ b/css/style.css
@@ -663,6 +663,14 @@ a {
   opacity: 0;
 }
 
+fieldset {
+  border: none;
+}
+
+table {
+  border-collapse: collapse;
+}
+
 .Scroll {
   position: fixed;
   right: 1vw;
@@ -1157,11 +1165,11 @@ a {
   padding: 150px 0px 650px;
   background-color: #efefef;
 }
-#services .inner {
+#services .innerH1 {
   width: 1180px;
   margin: 0 auto;
 }
-#services .inner h1 {
+#services .innerH1 h1 {
   font-weight: bold;
   font-size: 50px;
   color: #555;
@@ -1472,7 +1480,7 @@ a {
   #services {
     padding: 100px 0px 600px;
   }
-  #services .inner {
+  #services .innerH1 {
     width: 100%;
     max-width: 1180px;
     overflow: hidden;
@@ -1516,10 +1524,6 @@ a {
 }
 @media screen and (max-width: 539px) {
   #visual .slider .inner {
-    width: 100%;
-    max-width: 1180px;
-    overflow: hidden;
-    padding: 0px 10px;
     top: 40%;
   }
   #visual .slider .inner h1 {
@@ -1535,26 +1539,8 @@ a {
     height: 30px;
     width: 30px;
   }
-  #information.action {
-    padding: 100px 0;
-  }
-  #information.action .inner {
-    width: 100%;
-    max-width: 1180px;
-    overflow: hidden;
-    padding: 0px 10px;
-    display: block;
-  }
-  #information.action .inner .wrap {
-    width: 100%;
-  }
   #information.action .inner .wrap h1 {
-    text-align: center;
-    margin: 0px 0px 20px;
-    padding-top: 0;
-  }
-  #information.action .inner .wrap a {
-    margin: 30px auto 0px;
+    font: bold 25px/1 "arial";
   }
   #information.action .QiuckJoin {
     margin: 50px auto 0;
@@ -1562,7 +1548,7 @@ a {
   #services {
     padding: 100px 0px 400px;
   }
-  #services .inner {
+  #services .innerH1 {
     width: 100%;
     max-width: 1180px;
     overflow: hidden;
